--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ android {
     }
 
     compileSdkVersion versions.sdk
-    buildToolsVersion versions.tools
+    buildToolsVersion '30.0.2'
     defaultConfig {
         applicationId "com.dhis2"
         minSdkVersion versions.minSdk
